--- a/styles.css
+++ b/styles.css
@@ -63,12 +63,18 @@ img.shbitt_logo {
 .card-deck {
     margin: 10px;
     padding: 0px;
-    
      
       
 }
-    
 
+.card{
+  border-radius: 10px;
+}
+
+.card-img-top{
+  border-top-left-radius: 10px; 
+  border-top-right-radius: 10px;
+}
 
 
 
